@@ -1,6 +1,8 @@
 gcc-defaults (1.129) UNRELEASED; urgency=medium
 
   * Default to 4.9 for m68k (Thorsten Glaser).
+  * Provide gcc-{ar,nm,ranlib} man pages.
+  * Build a gccgo-doc package when building the documentation packages.
 
  -- Matthias Klose <doko@debian.org>  Wed, 11 Jun 2014 12:31:52 +0200
 
